--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,15 +36,15 @@
         />
 
     <Button
-        android:layout_width="120dp"
-        android:layout_height="50dp"
+        android:layout_width="110dp"
+        android:layout_height="40dp"
         android:text="LogIn"
         android:textAllCaps="false"
         android:background="@drawable/button_round"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/t2"
         android:layout_marginTop="20dp"
-        android:textSize="20sp"
+        android:textSize="25sp"
         android:textAlignment="center"
         android:textColor="#424242"
         android:id="@+id/b1"
@@ -79,7 +79,7 @@
 
             android:background="@android:color/transparent"
             android:layout_marginTop="3dp"
-            android:textColor="#4fc3f7"
+            android:textColor="#81d4fa"
 
             />
 
