--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -16,7 +16,7 @@
         android:hint="FirstName"
         android:textColor="#455a64"
         android:id="@+id/t1"
-        android:inputType="text"
+        android:inputType="textPersonName"
         android:background="@drawable/edit_round"
         android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
         android:paddingLeft="10dp"
@@ -32,7 +32,7 @@
         android:id="@+id/t2"
         android:layout_below="@+id/t1"
         android:textColor="#455a64"
-        android:inputType="text"
+        android:inputType="textPersonName"
         android:background="@drawable/edit_round"
         android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
         android:paddingLeft="10dp"
