--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ECEFF1"
+    android:background="#455a64"
     tools:context=".MainActivity">
+
+
 
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_round"
        android:layout_centerHorizontal="true"
-       android:layout_marginTop="150dp"
+       android:layout_marginTop="250dp"
        android:id="@+id/t1"
        android:textColor="#455a64"
        android:hint="Username"
@@ -36,7 +38,8 @@
         />
 
     <Button
-        android:layout_width="110dp"
+        android:layout_width="240dp"
+
         android:layout_height="40dp"
         android:text="LogIn"
         android:textAllCaps="false"
@@ -44,9 +47,9 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/t2"
         android:layout_marginTop="20dp"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textAlignment="center"
-        android:textColor="#424242"
+        android:textColor="#cfd8dc"
         android:id="@+id/b1"
         />
     <LinearLayout
@@ -55,14 +58,15 @@
         android:orientation="horizontal"
         android:layout_centerHorizontal="true"
         android:id="@+id/l1"
-        android:layout_below="@id/b1">
+        android:layout_below="@id/b1"
+        android:paddingStart="40dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="New User?"
-            android:textSize="22sp"
-            android:textColor="#455A64"
+            android:textSize="18sp"
+            android:textColor="#cfd8dc"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/b1"
             android:layout_marginTop="5dp"
@@ -72,10 +76,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/b2"
+
             android:text="SignUp"
             android:textAllCaps="false"
             android:textAlignment="textStart"
-            android:textSize="20sp"
+            android:textSize="17sp"
 
             android:background="@android:color/transparent"
             android:layout_marginTop="3dp"
@@ -86,8 +91,17 @@
 
     </LinearLayout>
 
-
-
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="250dp"
+        android:padding="70dp"
+        app:srcCompat="@drawable/user" />
 
 
 </RelativeLayout>
