--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -19,7 +19,7 @@
         android:layout_marginBottom="380dp"
 
         android:padding="40dp"
-        app:srcCompat="@drawable/log" />
+        app:srcCompat="@drawable/signup" />
 
 
 
