--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -9,6 +9,7 @@
     android:background="#cfd8dc">
 
     <Button
+        android:id="@+id/btn3"
         android:layout_width="240dp"
         android:layout_height="40dp"
         android:text="Scan"
@@ -20,7 +21,6 @@
         android:textAllCaps="false"
         android:textSize="24sp"
         android:textColor="#cfd8dc"
-        android:id="@+id/btn3"
         android:background="@drawable/button_round"
         android:gravity="top"
         android:textStyle="normal"/>
@@ -43,11 +43,11 @@
         android:layout_width="240dp"
         android:layout_height="40dp"
         android:background="@drawable/edit_round"
-        android:layout_marginBottom="30dp"
         android:hint="OTP"
         android:textSize="25sp"
         android:textAlignment="center"
         android:layout_gravity="center"
+        android:gravity="center"
         android:id="@+id/t7"
 
         />
