--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#cfd8dc"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/r1">
 
 
 
@@ -52,6 +53,18 @@
         android:textColor="#cfd8dc"
         android:id="@+id/b1"
         />
+
+    <Button
+        android:id="@+id/logOutButton"
+        android:layout_marginLeft="300dp"
+        android:layout_width="50sp"
+        android:layout_height="50sp"
+        android:background="@drawable/ic_power_settings_new_black_24dp"
+
+        />
+
+
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
