--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -13,7 +13,7 @@
         android:layout_width="240dp"
         android:layout_height="40dp"
         android:text="Scan"
-        android:layout_gravity="center"
+
         android:textAlignment="center"
         android:layout_marginTop="30dp"
         android:layout_marginStart="10dp"
@@ -24,6 +24,16 @@
         android:background="@drawable/button_round"
         android:gravity="top"
         android:textStyle="normal"/>
+
+    <Button
+        android:id="@+id/logOut"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/ic_power_settings_new_black_24dp"
+        android:layout_marginLeft="270dp"
+        android:layout_weight="0"
+
+        />
 
     <ListView
         android:layout_width="match_parent"
@@ -49,6 +59,7 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:id="@+id/t7"
+        android:layout_marginBottom="10dp"
 
         />
 
