--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -16,6 +16,7 @@
 
         android:textAlignment="center"
         android:layout_marginTop="30dp"
+        android:layout_gravity="center"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:textAllCaps="false"
@@ -25,26 +26,81 @@
         android:gravity="top"
         android:textStyle="normal"/>
 
-    <Button
-        android:id="@+id/logOut"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@drawable/ic_power_settings_new_black_24dp"
-        android:layout_marginLeft="270dp"
-        android:layout_weight="0"
 
-        />
-
-    <ListView
+    <RelativeLayout
+        android:id="@+id/relativeLay"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="5dp"
+        android:layout_margin="10dp"
         android:layout_weight="1"
-        android:background="@drawable/list_round"
-        android:id="@+id/l2"/>
+        android:background="@drawable/grad">
+
+
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginLeft="110dp"
+            android:layout_marginTop="0dp"
+            android:adjustViewBounds="true"
+            android:background="@drawable/circle"
+            android:padding="3dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_person_black_24dp" />
+
+
+        <TextView
+            android:id="@+id/t1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="164dp"
+            android:text="Name: Kamalesh Biswas"
+            android:textAlignment="textStart"
+            android:textSize="25sp" />
+
+        <TextView
+            android:id="@+id/t2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/t1"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="207dp"
+            android:text="Username:kamalesh_5678"
+            android:textAlignment="textStart"
+            android:textSize="25sp" />
+
+
+        <TextView
+            android:id="@+id/t3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/t1"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="253dp"
+            android:text="Email:kamalesh12@gmail.com"
+            android:textAlignment="textStart"
+            android:textSize="24sp" />
+
+
+        <TextView
+            android:id="@+id/t4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/t3"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="12dp"
+            android:text="Contact:+91 9563956395"
+            android:textAlignment="textStart"
+            android:textSize="24sp" />
+
+    </RelativeLayout>
 
 
 
@@ -53,7 +109,7 @@
         android:layout_width="240dp"
         android:layout_height="40dp"
         android:background="@drawable/edit_round"
-        android:hint="OTP"
+        android:hint="QRCode"
         android:textSize="25sp"
         android:textAlignment="center"
         android:layout_gravity="center"
