--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,112 +12,61 @@
         android:id="@+id/btn3"
         android:layout_width="240dp"
         android:layout_height="40dp"
-        android:text="Scan"
-
-        android:textAlignment="center"
-        android:layout_marginTop="30dp"
+        android:layout_alignParentEnd="true"
         android:layout_gravity="center"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:textAllCaps="false"
-        android:textSize="24sp"
-        android:textColor="#cfd8dc"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="61dp"
         android:background="@drawable/button_round"
-        android:gravity="top"
-        android:textStyle="normal"/>
+        android:gravity="center"
+        android:text="Scan"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="#cfd8dc"
+        android:textSize="24sp"
+        android:textStyle="normal" />
 
 
-    <RelativeLayout
-        android:id="@+id/relativeLay"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="10dp"
-        android:layout_weight="1"
-        android:background="@drawable/grad">
+    <ImageView
+        android:layout_width="189dp"
+        android:layout_height="173dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="166dp"
+        android:src="@drawable/flower" />
 
 
-        <ImageView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_marginLeft="110dp"
-            android:layout_marginTop="0dp"
-            android:adjustViewBounds="true"
-            android:background="@drawable/circle"
-            android:padding="3dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/ic_person_black_24dp" />
-
-
-        <TextView
-            android:id="@+id/t1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="164dp"
-            android:text="Name: Kamalesh Biswas"
-            android:textAlignment="textStart"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/t2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/t1"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="207dp"
-            android:text="Username:kamalesh_5678"
-            android:textAlignment="textStart"
-            android:textSize="25sp" />
-
-
-        <TextView
-            android:id="@+id/t3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/t1"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="253dp"
-            android:text="Email:kamalesh12@gmail.com"
-            android:textAlignment="textStart"
-            android:textSize="24sp" />
-
-
-        <TextView
-            android:id="@+id/t4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/t3"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="12dp"
-            android:text="Contact:+91 9563956395"
-            android:textAlignment="textStart"
-            android:textSize="24sp" />
-
-    </RelativeLayout>
-
-
-
-
-    <TextView
+    <EditText
+        android:id="@+id/t7"
         android:layout_width="240dp"
         android:layout_height="40dp"
-        android:background="@drawable/edit_round"
-        android:hint="QRCode"
-        android:textSize="25sp"
-        android:textAlignment="center"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center"
+        android:layout_marginBottom="146dp"
+        android:background="@drawable/edit_round"
         android:gravity="center"
-        android:id="@+id/t7"
-        android:layout_marginBottom="10dp"
+        android:hint="OTP"
+        android:textAlignment="center"
+        android:textSize="25sp" />
 
-        />
+
+    <Button
+        android:id="@+id/btn4"
+        android:layout_width="240dp"
+        android:layout_height="40dp"
+        android:layout_alignStart="@+id/btn3"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center"
+        android:layout_marginBottom="83dp"
+        android:background="@drawable/button_round"
+        android:gravity="center"
+        android:text="OK"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="#cfd8dc"
+        android:textSize="24sp"
+        android:textStyle="normal" />
 
 
-</LinearLayout>
+
+</RelativeLayout>
